# trafficsimulator

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: Graphics.cpp  Graphics.h  Intersection.cpp  Intersection.h  Street.h  TrafficLight.cpp  TrafficLight.h  TrafficObject.cpp  TrafficObject.h  TrafficSimulator.cpp  Vehicle.cpp  Vehicle.h  Vehicle_Student.cpp
